Fixed broken css file

--- a/BirthdayReminder/platforms/android/src/main/assets/app/app.css
+++ b/BirthdayReminder/platforms/android/src/main/assets/app/app.css
@@ -1,4 +1,4 @@
-﻿button,
+button,
 label,
 image {
     margin-top: 10;
